# arviz-plots

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  References.md  docstub.toml  github_comment.txt  pyproject.toml  temp.txt  testing.py  tox.ini
.github/: dependabot.yml  hypothesis.md
.github/workflows/: hypothesis.yml  post-release.yml  publish.yml  rtd-preview.yml  test.yml
contribution/: review.md  test_joint_plot.py
docs/source/: conf.py  glossary.md  index.md
docs/source/_static/: custom.css
docs/source/_templates/: name.html
docs/source/api/: helpers.rst  index.md  managers.rst  plots.rst  visuals.rst
docs/source/contributing/: docs.md  kwargs_conventions.md  new_plot.md  testing.md
docs/source/gallery/: backreferences.json  index.md  plot_dist_ecdf.part.md  plot_dist_kde.part.md  plot_dist_models.part.md  plot_forest.md  plot_forest.part.md  plot_forest_ess.part.md  plot_forest_models.part.md  plot_forest_shade.md  plot_forest_shade.part.md  plot_trace.part.md  plot_trace_dist.md  plot_trace_dist.part.md
docs/source/tutorials/: Overview.ipynb  accessing_backend_objects.ipynb  compose_own_plot.ipynb  intro_to_plotcollection.ipynb  intro_to_plotmuseum.ipynb  overview.ipynb  plot_dist_examples.ipynb  plot_posterior_examples.ipynb  plots_intro.ipynb
docs/sphinxext/: gallery_generator.py
src/arviz_plots/: __init__.py  _version.py  plot_collection.py  plot_matrix.py  style.py
src/arviz_plots/backend/: __init__.py  aesthetic_aliases.py  alias_utils.py
src/arviz_plots/plots/: __init__.py  autocorr_plot.py  autocorrplot.py  bf_plot.py  bf_plot.pyi  bfplot.py  combine.py  compare_plot.py  compareplot.py  convergence_dist_plot.py  convergencedistplot.py  dens_pit_plot.py  dgof_dist_plot.py  dgof_plot.py  dist_plot.py  dist_plot.pyi  distplot.py  ecdf_plot.py  ecdfplot.py  energy_plot.py  energy_plot.pyi  energyplot.py  ess_plot.py  essplot.py  evolution_plot.py  evolutionplot.py  forest_plot.py  forest_plot.pyi  forestplot.py  joint_plot.py  khat_plot.py  lm_plot.py  loo_interval_plot.py  loo_pava_plot.py  loo_pit_plot.py  loopitplot.py  mcse_plot.py  mcseplot.py  noseplot.py  pair_focus_plot.py  (+45 more)
src/arviz_plots/styles/: arviz-cetrino.mplstyle  arviz-cetrino.yml  arviz-clean.mplstyle  arviz-clean_01.mplstyle  arviz-clean_02.mplstyle  arviz-darkgrid.yml  arviz-tenui.mplstyle  arviz-tenui.yml  arviz-tumma.mplstyle  arviz-tumma.yml  arviz-variat.mplstyle  arviz-variat.yml  (+2 more)
tests/: __init__.py  conftest.py  test_axis_limits.py  test_backend.py  test_bfplot.py  test_bokeh.py  test_combine_plots.py  test_facet_map.py  test_figure_title.py  test_fixtures.py  test_hypothesis_plots.py  test_matplotlib.py  test_plot_collection.py  test_plot_matrix.py  test_plotly.py  test_plots.py  test_plots_none_backend.py  test_styles.py  test_ts_plot.py  test_utils.py
(+147 files in other folders)
